load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/google/differential-privacy/privacy-on-beam/v2/codelab/main
gazelle(name = "gazelle")

# keep
go_binary(
    name = "sensitivity_attack",
    srcs = [
        "main.go",
        "utils.go",
        "pair.go",
        "sum.go",
    ],
    data = [
        "//codelab_sum:arr_u_i.csv",
    ],
    importpath = "github.com/opendp/sensitivity_attack",
    visibility = ["//visibility:public"],
    deps = [
        "//pbeam:go_default_library",
        "@com_github_apache_beam_sdks_v2//go/pkg/beam/transforms/stats:go_default_library",
        "@com_github_apache_beam_sdks_v2//go/pkg/beam:go_default_library",
        "@com_github_apache_beam_sdks_v2//go/pkg/beam/io/filesystem/local:go_default_library",
        "@com_github_apache_beam_sdks_v2//go/pkg/beam/io/textio:go_default_library",
        "@com_github_apache_beam_sdks_v2//go/pkg/beam/runners/direct:go_default_library",
        "@com_github_apache_beam_sdks_v2//go/pkg/beam/transforms/stats:go_default_library",
        "@com_github_golang_glog//:go_default_library",
    ],
)
